--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,43 +1,43 @@
-name: Playwright Scheduled Tests
+# name: Playwright Scheduled Tests
 
-on:
-  schedule:
-    # Run every day at 7:00 AM (UTC)
-    - cron: "30 11 * * *"
+# on:
+#   schedule:
+#     # Run every day at 7:00 AM (UTC)
+#     - cron: "30 11 * * *"
 
-  # You can still trigger manually if needed
-  workflow_dispatch:
+#   # You can still trigger manually if needed
+#   workflow_dispatch:
 
-jobs:
-  test:
-    runs-on: ubuntu-latest
+# jobs:
+#   test:
+#     runs-on: ubuntu-latest
 
-    steps:
-      # 1️⃣ Checkout your repository
-      - name: Checkout code
-        uses: actions/checkout@v4
+#     steps:
+#       # 1️⃣ Checkout your repository
+#       - name: Checkout code
+#         uses: actions/checkout@v4
 
-      # 2️⃣ Setup Node.js
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
+#       # 2️⃣ Setup Node.js
+#       - name: Setup Node.js
+#         uses: actions/setup-node@v4
+#         with:
+#           node-version: '20'
 
-      # 3️⃣ Install dependencies
-      - name: Install dependencies
-        run: npm ci
+#       # 3️⃣ Install dependencies
+#       - name: Install dependencies
+#         run: npm ci
 
-      # 4️⃣ Install Playwright browsers
-      - name: Install Playwright Browsers
-        run: npx playwright install --with-deps
+#       # 4️⃣ Install Playwright browsers
+#       - name: Install Playwright Browsers
+#         run: npx playwright install --with-deps
 
-      # 5️⃣ Run Playwright tests
-      - name: Run Playwright Tests
-        run: npx playwright test --reporter=html
+#       # 5️⃣ Run Playwright tests
+#       - name: Run Playwright Tests
+#         run: npx playwright test --reporter=html
 
-      # 6️⃣ Upload HTML report as artifact
-      - name: Upload Playwright Report
-        uses: actions/upload-artifact@v4
-        with:
-          name: playwright-report
-          path: playwright-report/
+#       # 6️⃣ Upload HTML report as artifact
+#       - name: Upload Playwright Report
+#         uses: actions/upload-artifact@v4
+#         with:
+#           name: playwright-report
+#           path: playwright-report/
